# steam-library-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.example.yml  mypy.ini  pylint.toml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
docs/: DESIGN.md
src/steam_library_monitor/: __init__.py  __main__.py  app.py  config.py  db.py  emailer.py  logging_config.py  models.py  steam.py
tests/: test_app.py  test_config.py  test_db.py  test_emailer.py  test_steam.py
